--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -8,7 +8,7 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true">
 
-    <RelativeLayout
+    <android.support.design.widget.CoordinatorLayout
         android:id="@+id/activity_home"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -23,7 +23,22 @@
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
         >
     </android.support.v7.widget.Toolbar>
-    </RelativeLayout>
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recyclerview"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+        </android.support.v7.widget.RecyclerView>
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/floating_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|right"
+            android:layout_margin="16dp"
+            android:src="@drawable/ic_launcher"
+            android:elevation="8dp"/>
+
+    </android.support.design.widget.CoordinatorLayout>
 
     <!--
     <RelativeLayout
