--- a/app/src/main/res/layout/activity_scenery.xml
+++ b/app/src/main/res/layout/activity_scenery.xml
@@ -6,10 +6,12 @@
     android:id="@+id/activity_scenery"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
     tools:context="com.cxing.mygank.activity.SceneryActivity">
     <android.support.design.widget.AppBarLayout
         android:id="@+id/app_bar_layout"
         android:layout_width="match_parent"
+        android:fitsSystemWindows="true"
         android:layout_height="250dp">
         
         <android.support.design.widget.CollapsingToolbarLayout
@@ -18,6 +20,7 @@
             android:layout_height="match_parent"
             android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
             app:contentScrim="?attr/colorPrimary"
+            android:fitsSystemWindows="true"
             app:layout_scrollFlags="scroll|exitUntilCollapsed">
             
             <ImageView
@@ -25,6 +28,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:scaleType="centerCrop"
+                android:fitsSystemWindows="true"
                 app:layout_collapseMode="parallax"
                 />
             <android.support.v7.widget.Toolbar
