--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,6 +9,9 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
         <!--<item name="android:textColorPrimary">#ffffffff</item>-->
+    </style>
+
+    <style name="sceneryTheme" parent="MyTheme">
 
     </style>
 
